# copilot-instructions

./: README.md  pyproject.toml
src/python_app/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
