[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-app"
version = "0.1.0"
description = "Empty Python application scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
python-app = "python_app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
